--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link data-trunk rel="scss" href="node_modules/@patternfly/patternfly/patternfly.scss">
     <link data-trunk rel="scss" href="node_modules/@patternfly/patternfly/patternfly-addons.scss">
     <link data-trunk rel="copy-dir" href="node_modules/@patternfly/patternfly/assets">
+    <link data-trunk rel="copy-file" href="proxy.php">
+    <link data-trunk rel="copy-file" href="composer.json">
+    <link data-trunk rel="copy-file" href="composer.lock">
 </head>
 <body>
 </body>
