build: copying stuff did work differently

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link data-trunk rel="scss" href="node_modules/@patternfly/patternfly/patternfly-addons.scss">
     <link data-trunk rel="copy-dir" href="node_modules/@patternfly/patternfly/assets">
     <link data-trunk rel="copy-file" href="proxy.php">
-    <link data-trunk rel="copy-file" href="composer.json">
-    <link data-trunk rel="copy-file" href="composer.lock">
+    <link data-trunk rel="copy-dir" href="php">
 </head>
 <body>
 </body>
